--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
             async
             defer
         ></script>
+        <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 
         <!-- built files will be auto injected -->
     </body>
