--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v3.2&appId=542185515968935&autoLogAppEvents=1"
     ></script>
     <link rel="stylesheet" href="https://cdn.pannellum.org/2.5/pannellum.css" />
+    <link rel="stylesheet" href="https://unpkg.com/fullpage.js/dist/fullpage.min.css">
     <script
       src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit"
       async
