--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
       defer
     ></script>
 
+    
     <!-- built files will be auto injected -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
   </body>
 </html>
