--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC@300;400;500;600;700&family=Noto+Sans+TC@300;400;500;600;700&family=Noto+Serif+JP@600;700&subset=chinese-traditional" />
-    <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC@300;400;500;600;700&family=Noto+Sans+TC@300;400;500;600;700&family=Noto+Serif+JP@600;700&subset=chinese-traditional"
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC@300;400;500;600;700&family=Noto+Sans+TC@300;400;500;600;700&family=Noto+Serif+JP@600;700&subset=chinese-traditional"
-      />
-    </noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=Noto+Serif+TC:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 </head>
 
 <body>
