--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;500;600;700;900&family=Noto+Serif+TC:wght@900&display=swap" rel="stylesheet" />
-
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;500;600;700;900&family=Noto+Serif+TC:wght@900&family=Bellota+Text:wght@300;400&display=swap" rel="stylesheet" />
     <script src="https://www.youtube.com/iframe_api"></script>
 </head>
-
 <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
 </body>
-
 </html>
