--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700;900&family=Noto+Serif+TC:wght@300;500;700;900&display=swap" rel="stylesheet" />
 
     <script src="https://www.youtube.com/iframe_api"></script>
+    
+<!-- Global site tag (gtag.js) - Google Ads: 815347962 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-815347962"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-815347962');
+</script>
 </head>
 
 <body>
